# Class3-GrassHopper

./: .gitignore  00_omdena_terrayield_modelling.ipynb  README.md  curse_of_dimensionality.py  dontrevealsecret.py  render.yaml
backend/: 1000vectors.py  Full_Code_NLP_RAG_Project_Notebook.html  Full_Code_NLP_RAG_Project_Notebook.ipynb  account_management_agent_questions.txt  billing_agent_questions.txt  general_agent_questions.txt  hackathon_final_200.csv  health_classification_200_v2_1.csv  hr_agent_questions.txt  ingest.py  main.py  notebook_to_pdf.py  output.txt  pyproject.toml  router_agent.py  router_classifier.py  router_tools.py  sampling.py  support_interactions.jsonl  test_adk.py  test_events.py  testcodegemma.py  tohtml.py  topdf.py
backend/april 21/: HelmNet_Full_Code.ipynb
backend/backtrackexperiment/: action_items.tmp  backtracking_agent.py  messy_transcript.txt
backend/category_batches/: arthritis.csv  cardiovascular.csv  copd_respiratory.csv  diabetes.csv  eye condition.csv  neurological.csv
backend/data/: vector_store.pkl
backend/huggingface _may7/: Full_Code_SuperKart_Model_Deployment_Notebook.html  Full_Code_SuperKart_Model_Deployment_Notebook.ipynb
backend/march22/: Full_Code_NLP_RAG_Project_Notebook.html  Full_Code_NLP_RAG_Project_Notebook_.ipynb  notebook_to_pdf.py
backend/notebook/: DAY_2_HANDS_ON_SESSION_4_langgraph_logging_checkpointing.ipynb
backend/promptoptimization/10pm/: datageneration.py  hackathon_final__nurse_style.csv
backend/promptoptimization/10pm/category_batches/: arthritis.csv  cardiovascular.csv  copd_respiratory.csv  (+3 more)
(+17 files in other folders)
